--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         yefferson estrada
     </article>
     <p>Hola yefferson tu puedes </p>
+    <p>ya me conecte con git y github</p>
 </body>
 </html>
